[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/gameover-01.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sfx/hit-02.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sprites/sprites.png" type="Texture" id=4]
[ext_resource path="res://assets/sfx/winner-01.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[node name="Player" type="Area2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -15.0
margin_top = -15.0
margin_right = 15.0
margin_bottom = 15.0
color = Color( 0.25098, 0.32549, 0.945098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
